src/amo/components/Collection/styles.scss
@import "~amo/css/inc/vars";
@import "~core/css/inc/mixins";
@import "~photon-colors/photon-colors";
@import "~ui/css/vars";

.Collection {
  padding: $padding-page;

  @include respond-to(large) {
    padding: $padding-page-l;
  }

  .MetadataCard {
    @include respond-to(large) {
      margin-top: 12px;
    }
  }
}

.Collection-title {
  @include font-light();

  font-size: $font-size-l;
  hyphens: auto;
  word-wrap: break-word;
}

.Collection-description {
  font-size: $font-size-s;
  hyphens: auto;
  word-wrap: break-word;
}

.Collection-detail {
  .Card-contents {
    overflow: visible;
  }
}

.Collection-author-name-value {
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

@include respond-to(large) {
  .Collection-wrapper {
    display: grid;
    grid-auto-flow: column dense;
    grid-gap: 0 $padding-page-l;
    grid-template-columns: minmax(300px, 35%) 1fr;
    margin: 10px 0 0;

    .Collection-detail {
      grid-column: 1;
    }

    .Collection-items {
      grid-column: 2;

      .CardList {
        margin-top: 0;
      }
    }
  }
}

